# bring-cli

./: .gitignore  CLAUDE.md  CLI_TOOL_ARCHITECTURE.md  Makefile  README.md  cliref.md  copy-to-skill.sh  install.sh  prd.md  pyproject.toml
bring/: cli.py  models.py  output.py  pyproject.toml
bring/core/: bring_client.py
tests/: test_cli.py
